Fixed - Contact form visualization on mobile devices.

--- a/assets/less/contact.less
+++ b/assets/less/contact.less
@@ -1,10 +1,4 @@
-.page_contact header#display{
-  background: @dg-color url("../img/banners_samples/banner_contact.png") no-repeat top center;
-  p{
-    text-transform: none;
-  }
-}
-.taan {
+.taan.page_contact {
   form{
     padding: 30px 0;
 
@@ -13,15 +7,31 @@
       resize: none;
     }
   }
-}
+  header#display{
+    background: @dg-color url("../img/banners_samples/banner_contact.png") no-repeat top center;
+    p{
+      text-transform: none;
+    }
+  }
 
-@media screen and (min-width: 768px){
-  .page_contact header#display{
-    padding: 35px 0;
+  @media screen and (min-width: 768px){
+    header#display{
+      padding: 35px 0;
 
-    .display_title {
-      padding: 40px 3%;
-      max-height: 385px
+      .display_title {
+        padding: 40px 3%;
+        max-height: 385px
+      }
+    }
+  }
+  @media screen and (max-width: 768px){
+    header#display{
+      max-height: inherit;
+
+      .display_title {
+        max-height: inherit;
+        height: auto;
+      }
     }
   }
 }
